--- a/style.css
+++ b/style.css
@@ -166,48 +166,16 @@ p {
   border: 1px solid #00ff99;
   color: #00ff99;
 }
-/* .hero {
-  background-image: url("assets/hero-bg.png");
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  height: 90vh;
-  width: 100%;
+/* about section */
+.about {
+  align-items: center;
   text-align: center;
-  align-items: center;
+  margin: 80px;
 }
-.banner {
-  padding-top: 100px;
+.about-text {
+  line-height: 25px;
+  margin-top: 30px;
 }
-.main-logo-circle {
-  border-radius: 50%;
-  align-items: center;
-  justify-content: center;
-  font-size: 60px;
-  position: relative;
-}
-.subtitle {
-  margin: 20px 0px;
-}
-.btn-outline {
-  border: 1px solid rgb(9, 214, 9);
-  padding: 8px 10px;
-  border-radius: 20px;
-  color: rgb(4, 209, 4);
-  background-color: black;
-  margin-left: 5px;
-}
-.badge {
-  position: absolute;
-  top: 10px;
-  right: 0;
-  background: var(--accent-green);
-  color: black;
-  font-size: 10px;
-  padding: 4px 10px;
-  border-radius: 20px;
-} */
-
 .stats {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
@@ -218,16 +186,32 @@ p {
   color: var(--accent-green);
   font-size: 36px;
 }
-
+/* Choose Section */
+.section-title {
+  text-align: center;
+  margin-bottom: 50px;
+}
 .features-grid {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: 1.2fr 1fr 1fr;
   gap: 20px;
+}
+.audio {
+  grid-row: span 2;
+}
+.expert {
+  grid-column: span 2;
+}
+.choose-icon {
+  width: 30px;
+  margin-bottom: 15px;
 }
 .feature-card {
   background: var(--card-bg);
   padding: 40px;
   border-radius: 20px;
+  align-items: center;
+  justify-content: center;
 }
 
 .episodes-grid {
